--- a/ASSETS/style/services.css
+++ b/ASSETS/style/services.css
@@ -75,7 +75,9 @@ span{
 
 /* services */
 .services{
-	background: var(--bg-color);
+	background-color: var(--bg-color);
+	margin-left: 10%;
+	
 }
 .main-text{
 	text-align: center;
@@ -97,7 +99,7 @@ span{
 	margin-top: 5rem;
 }
 .box{
-	background: var(--second-bg-color);
+	background: var(--bg-color);
 	padding: 35px 45px;
 	border-radius: 8px;
 	transition: all .45s ease;
@@ -109,7 +111,7 @@ span{
 .box h3{
 	font-size: 24px;
 	font-weight: 600;
-	color: var(--text-color);
+	color: var(--main-color);
 	margin-bottom: 15px;
 }
 .box p{
@@ -138,6 +140,130 @@ span{
 	cursor: pointer;
     color: var(--main-color);
 }
+.serv-box {
+    display: inline-block;
+    margin: 20px;
+    width: 300px;
+    background-color: var(--second-bg-color);
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #f5eeee1a;
+  }
+  
+  .serv-box-img {
+    overflow: hidden;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  
+  .serv-box-img img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+  .serv-box h3 {
+    font-size: 18px;
+    font-weight: bold;
+	color: var(--main-color);
+    margin: 10px 0;
+    padding: 10px;
+    border-bottom: 2px solid var(--second-color);
+  }
+  
+  .serv-box p {
+    padding: 10px;
+    font-size: 14px;
+    color: var(--text-color);
+  }
+  
+  .serv-box {
+	opacity: 0;
+	transform: translateY(20px);
+	transition: all 01s ease-in-out;
+  }
+  
+  .serv-box:nth-child(1) {
+	animation: fadeIn 1s 0.2s forwards;
+  }
+  
+  .serv-box:nth-child(2) {
+	animation: fadeIn 1s 0.4s forwards;
+  }
+  
+  .serv-box:nth-child(3) {
+	animation: fadeIn 1s 0.6s forwards;
+  }
+  
+  @keyframes fadeIn {
+	0% {
+	  opacity: 0;
+	  transform: translateY(20px);
+	}
+	100% {
+	  opacity: 1;
+	  transform: translateY(0);
+	}
+  }
+
+  .services {
+	position: relative;
+  }
+  
+  .serv-box {
+	opacity: 0;
+	transition: opacity 0.5s ease-in-out;
+  }
+  
+  .serv-box:hover {
+	opacity: 1;
+	transform: scale(1.1);
+	transition: transform 0.5s ease-in-out;
+  }
+  
+  .serv-box-img {
+	overflow: hidden;
+  }
+  
+  .serv-box-img img {
+	transition: transform 0.5s ease-in-out;
+  }
+  
+  .serv-box-img img:hover {
+	transform: scale(1.1);
+  }
+  
+  /* Fade in on scroll */
+  .serv-box {
+	animation: fadeIn 1s ease-in-out;
+	animation-fill-mode: forwards;
+	animation-delay: 1s;
+  }
+  
+  @keyframes fadeIn {
+	0% {
+	  opacity: 0;
+	}
+	100% {
+	  opacity: 1;
+	}
+  }
+  
+  /* Add a delay to each box to create a staggered effect */
+  .serv-box:nth-child(1) {
+	animation-delay: 0.5s;
+  }
+  
+  .serv-box:nth-child(2) {
+	animation-delay: 1s;
+  }
+  
+  .serv-box:nth-child(3) {
+	animation-delay: 1.5s;
+  }
+
+  
+  
 /* ------end section----- */
 .end{
 	padding: 20px 15%;
