--- a/ASSETS/style/contact.css
+++ b/ASSETS/style/contact.css
@@ -80,6 +80,8 @@ span{
 	align-items: center;
 	gap: 2.5rem;
 	margin-top: 10%;
+	margin-right: 10%;
+	margin-left: 10%;
 }
 .contact-text h4{
 	color: var(--text-color);
@@ -92,7 +94,7 @@ span{
 	line-height: 1;
 }
 .contact-text p{
-	color: var(--text-color);
+	color: var(--second-color);
 	font-size: var(--p-font);
 	line-height: 1.8;
 	margin-bottom: 30px;
@@ -171,6 +173,7 @@ form textarea{
 	justify-content: space-between;
 	gap: 2rem;
 	background: var(--second-bg-color);
+	margin-bottom: 0px;
 }
 .last-text p{
 	color: var(--second-color);
@@ -265,5 +268,21 @@ form textarea{
 	}
 	.navlist.open{
 		top: 100%;
+	}
+}
+@media (max-width: 840px){
+	.contact{
+		margin-right: 10%;
+	}
+}
+@media (max-width: 40px){
+	.contact{
+		margin-right: 10%;
+		margin-left: 5%;
+		padding: 20px;
+	}
+	.list{
+		width: 80%;
+		margin-right: 20%;
 	}
 }
