--- a/ASSETS/style/index.css
+++ b/ASSETS/style/index.css
@@ -434,37 +434,12 @@ header.sticky{
 	color: var(--main-color);
 }
 
-.contact-form form{
+.contact-form {
 	position: relative;
 }
-.contact-form form input,
-form textarea{
-	width: 100%;
-	padding: 14px;
-	background: var(--second-bg-color);
-	color: var(--text-color);
-	border: #ccc;
-	outline: none;
-	font-size: 15px;
-	border-radius: 8px;
-	margin-bottom: 10px;
-}
-.contact-form textarea{
-	resize: none;
-	height: 240px;
-}
-.contact-form .submit{
-	display: inline-block;
-	font-size: 16px;
-	background: var(--main-color);
-	color: var(--text-color);
-	width: 160px;
-	transition: all .45s ease;
-}
-.contact-form .submit:hover{
-	transform: scale(1.1);
-	cursor: pointer;
-}
+
+
+
 /* ------end section----- */
 .end{
 	padding: 20px 15%;
@@ -536,6 +511,7 @@ form textarea{
 	.contact{
 		grid-template-columns: 1fr;
 	}
+
 }
 
 @media (max-width: 840px){
@@ -569,6 +545,9 @@ form textarea{
 	.navlist.open{
 		top: 100%;
 	}
+	.contact{
+		margin-right: 10%;
+	}
 
 	.home{
 		position: relative;
@@ -580,5 +559,10 @@ form textarea{
 		align-items: center;
 		justify-content: flex-start;
 		margin-top: 5%;
+	}
+
+	.contact-form{
+		width: 310px;
+		margin: 20% 0;
 	}
 }
