--- a/ASSETS/style/services.css
+++ b/ASSETS/style/services.css
@@ -151,8 +151,10 @@ span{
 
 .card-description {
   font-size: 18px;
-  height: 30%;
+  height: 20%;
   color: var(--text-color);
+  margin-bottom: 0px;
+  padding-bottom:0px ;
 }
 
 /* Fade-in effect on scrolling */
@@ -243,6 +245,125 @@ span{
   }
 
 }
+
+/* scrolling cards */
+.scroll-cards{
+	display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 60vh;
+  padding: 0px;
+  /* background: linear-gradient( var(--second-bg-color),rgba(0,0,0,0.1)); */
+}
+.wrapper {
+	max-width: 1100px;
+	width: 100%;
+	position: relative;
+  
+  }
+  
+  .wrapper i {
+	height: 50px;
+	width: 50px;
+	background:var(--main-color);
+	text-align: center;
+	line-height: 50px;
+	border-radius: 50%;
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	font-size: 1.25 rem;
+	transform: translateY(-50%);
+	box-shadow: 0 3px 6px rgba(255, 255, 255, 0.23);
+  
+  }
+  
+  .wrapper i:first-child {
+	left: -22px;
+  
+  }
+  
+  .wrapper i:last-child {
+	right: -22px;
+  
+  }
+  
+  .wrapper .carousel {
+	display: grid;
+	grid-auto-flow: column;
+	grid-auto-columns: calc((100% / 3) - 12px);
+	gap: 16px;
+	overflow-x: auto;
+	scroll-snap-type: x mandatory;
+	scroll-behavior: smooth;
+	scrollbar-width: 0;
+  }
+  
+  .carousel::-webkit-scrollbar {
+	display: none;
+  }
+  
+  .carousel :where(.s-card, .img) {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  
+  .carousel.dragging {
+	scroll-snap-type: none;
+	scroll-behavior: auto;
+  }
+  
+  .carousel.no-transition {
+	scroll-behavior: auto;
+  }
+  
+  .carousel.dragging .s-card {
+	cursor: grab;
+	user-select: none;
+  }
+  
+  .carousel .s-card {
+	scroll-snap-align: start;
+	height: 340px;
+	list-style: none;
+	background: linear-gradient(45deg, #3e1091, #8f4777, #c67e55);
+	border-radius: 8px;
+	display: flex;
+	cursor: pointer;
+	width: 98%;
+	padding-bottom: 15px;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+  }
+  
+   .s-card .img {
+	background:transparent;
+	
+	border-radius: 80%;
+  
+  } 
+  
+  .s-card .img img {
+	width: 220px;
+	height: 220px;
+	object-fit: cover;
+	border-radius: 80%;
+	/* border: 4px solid #fff; */
+  }
+  
+  .s-card h2 {
+	font-weight: 500;
+	font-size: 1.56rem;
+	margin: 30px 0 5px;
+  }
+  
+  .s-card span {
+	color: var(--text-color);
+	font-size: 1.31rem;
+  
+  }
 
   
   
@@ -362,3 +483,18 @@ span{
 		display: block;
 	}
 }
+
+@media screen and (max-width: 900px) {
+	.wrapper .carousel {
+		grid-auto-columns: calc((100% / 2) - 9px);
+  
+	}
+  }
+  
+  @media screen and (max-width: 600px) {
+	.wrapper .carousel {
+		grid-auto-columns: 100%;
+  
+	}
+  }
+  
